@@ -4,6 +4,7 @@ Build Date = @BUILDTIME@
 
 Changes in version 4.1:
  5:
+  URLDumpPane, TdsReadLogs : escape query string
   NppConvention for NPOESS
  4:
   ui/iosp: Grib2 Table
